# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile
.cargo/: config.toml
.github/workflows/: audit.yaml  general.yaml
migrations/: 20241221005244_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
