[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "^4.8.0"
chrono = { version = ">=0.4.38,<1.0.0", default-features = false, features = ["clock"] }
config = ">=0.14.0,<1.0.0"
reqwest = ">=0.12.5,<1.0.0"
secrecy = { version = ">=0.8.0,<1.0.0", features = ["serde"] }
serde = { version = "^1.0.204", features = ["derive"] }
serde-aux = "^4.5.0"
tokio = { version = "^1.39.2", features = ["macros", "rt-multi-thread"] }
tracing = { version = ">=0.1.40,<1.0.0", features = ["log"] }
tracing-actix-web = ">=0.7.11,<1.0.0"
tracing-log = ">=0.2.0,<1.0.0"
tracing-bunyan-formatter = ">=0.3.9,<1.0.0"
tracing-subscriber = { version = ">=0.3.18,<1.0.0", features = ["env-filter", "registry"] }
uuid = { version = "^1.10.0", features = ["v4"] }

[dependencies.sqlx]
version = ">=0.8.0,<1.0.0"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
once_cell = "^1.19.0"

[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "linker=clang",
    "-C", "link-arg=-fuse-ld=lld",
]
